--- a/demo/src/main/resources/com/assignment/style.css
+++ b/demo/src/main/resources/com/assignment/style.css
@@ -5,7 +5,7 @@
 }
 
 .root {
-    -fx-background-image: url("bg5.jpg");
+    -fx-background-image: url("background.jpg");
     -fx-background-repeat: stretch;
     -fx-background-size: cover;
     -fx-background-position: center center;
@@ -13,9 +13,9 @@
 }
 
 
-#buttonVBox .button {
+/*#buttonVBox .button {
     -fx-background-radius: 0.25em;
-}
+}*/
 
 
 .button {
@@ -24,7 +24,7 @@
     -fx-border-color: #46252a;
     -fx-border-width: 1px;
     -fx-border-style: solid;
-    -fx-border-radius: 10px;
+    -fx-border-radius: 0.3em;
     -fx-transition: -fx-effect 0.3s ease;
 }
 
